Fix footer spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -62,7 +62,6 @@ $on-laptop:        800px;
 
 .footer{
 	background-color: #f6f6f6;
-  padding: 0em 1em;
   border-top: 1px solid $grey-color-light;
 }
 .footercol{
